Fix music overflowing in mobile

--- a/src/mobile/components/video/video.scss
+++ b/src/mobile/components/video/video.scss
@@ -1,6 +1,6 @@
 $pfp-size: 49px;
 $album-icon-size: 48px;
-$music-span-width: 181px;
+$music-span-width: 200px;
 $like-anim-timing: 0.35s ease-in-out;
 
 .video-component-container {
